--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-    <title> Curriculm Santiago Londoño</title>
+    <title> Currículm Santiago Londoño</title>
 </head>
 
 <body>
@@ -15,10 +15,19 @@
         <div class="textheader">
             <H1> CURRICULUM VITAE </H1>
             <h3>Santy Londoño</h3>
-            <h4>+34 613 684 300</h4>
+            <h4><a href="tel:+34613684300">+34 613 684 300</a></h4>
+        </div>
+
+        <div class="header-brand">
+            <div class="header-for">For:</div>
+            <div class="logo-room">
+                <div class="logo-the">THE</div>
+                <div class="logo-main">ROOM</div>
+                <div class="logo-sub">DISCO <span class="logo-dot">&#8226;</span> CLUB</div>
+            </div>
         </div>
     </header>
-    <div class="Container">
+    <main><div class="Container">
         <div class="photoandname">
             <div class="Foto"><img class="fotomia" src="img/fotoccv.png" alt="Foto Santiago">
                 <div class=Nombre completo>
@@ -32,24 +41,17 @@
         </div>
         <div class="columna_izquierda">
             <section>
-                <h3> Perfil Profesional </h3>
+                <h3> Perfil profesional </h3>
                 <hr>
                 <br>
-                <p>Profesional polivalente con experiencia en coctelería básica, atención al cliente en el ámbito
-                    nocturno y elaboración de shishas. Destaco por mi capacidad de interlocución y don de gentes,
-                    así como por mi conocimiento de la diáspora latina en la ciudad, lo que me ha permitido
-                    identificar nichos de mercado y generar nuevas oportunidades de negocio en proyectos anteriores.
+                <p>Polivalente con experiencia en coctelería básica, atención al cliente en el ámbito nocturno y elaboración de shishas. Destaco por mi capacidad de interlocución y don de gentes, así como por mi conocimiento de la diáspora latina en la ciudad, lo que me ha permitido identificar nichos de mercado y generar nuevas oportunidades de negocio en proyectos anteriores.
                     <br><br>
 
 
-                    Cuento además con experiencia en logística, gestión administrativa y liderazgo de equipos.
-                    Actualmente me formo en Administración de Sistemas Informáticos en Red y Ciberseguridad,
-                    ampliando mi perfil hacia el ámbito tecnológico.
+                    Cuento además con experiencia en logística, gestión administrativa y liderazgo de equipos. Actualmente me formo en Administración de Sistemas Informáticos en Red y Ciberseguridad, ampliando mi perfil hacia el ámbito tecnológico.
                     <br><br>
 
-                    Soy un profesional colaborativo, con alta capacidad para el trabajo en equipo y una habilidad
-                    natural para conectar con las personas, aportando valor y contribuyendo al crecimiento del
-                    proyecto en el que participo.
+                    Soy un profesional colaborativo, con alta capacidad para el trabajo en equipo y una habilidad natural para conectar con las personas, aportando valor y contribuyendo al crecimiento del proyecto en el que participo.
                 </p>
             </section>
             <br>
@@ -59,16 +61,16 @@
                 <h3> <i class="bi bi-gear"> Habilidades </i> </h3>
                 <hr>
                 <br>
-                Bases en economia de la empresa<br>
-                Bases en marketing <br>
+                Bases en economía de la empresa<br>
+                Bases de marketing <br>
                 Trabajo en equipo <br>
                 Gestión de proyectos <br>
-                Logistica <br>
+                Logística <br>
                 Liderazgo <br>
-                Cocteleria <br>
+                Coctelería basica<br>
                 Shishas<br>
-                Atencion al cliente<br>
-                RRPP<br>
+                Atención al cliente<br>
+                RR.PP<br>
             </section>
             <br>
 
@@ -117,9 +119,9 @@
                 <h3> <i class="bi bi-envelope-arrow-up"> Información de contacto</i> </h3>
                 <hr>
                 <ul>
-                    <li>Email: santtty9944@gmail.com</li>
-                    <li>Teléfono +34 613 684 300</li>
-                    <li><a href="https://santtty94.github.io/Porfolio-listo/ ">Porfolio
+                    <li>Email: <a href=" https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&dsh=S-769098307%3A1770940244329887&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=AXbMIuAS6eIL5qgqzvlZrw_gXvMQpIPXKfNFn0E3gkovttZit6JVbOrfIY_KY6yEqB_ZByfMxuEmww&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin">santtty9944@gmail.com</a> </li>
+                    <li>Teléfono  <a href="tel:+34613684300">+34 613 684 300</a></li>
+                    <li>Porfolio estudiantil<a href="https://santtty94.github.io/Porfolio-listo/ ">Porfolio
                             estudiantil</a> </li>
             </section>
             </ul>
@@ -255,7 +257,15 @@
                 </ul>
             </div>
         </div>
-
+    </main>
+    <footer id="finalBar">
+            <p>© Copyright Santy Londoño - 
+            <script>document.write(new Date().getFullYear());</script></p>
+       
+    </footer>
 </body>
+<br>
+
+ 
 
 </html>
