--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <hr>
                 <ul>
                     <li>Email: <a href=" https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&dsh=S-769098307%3A1770940244329887&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F&ifkv=AXbMIuAS6eIL5qgqzvlZrw_gXvMQpIPXKfNFn0E3gkovttZit6JVbOrfIY_KY6yEqB_ZByfMxuEmww&osid=1&passive=1209600&service=mail&flowName=GlifWebSignIn&flowEntry=ServiceLogin">santtty9944@gmail.com</a> </li>
-                    <li>Teléfono  <a href="tel:+34613684300">+34 613 684 300</a></li>
-                    <li>Porfolio estudiantil<a href="https://santtty94.github.io/Porfolio-listo/ ">Porfolio
+                    <li>Teléfono:  <a href="tel:+34613684300">+34 613 684 300</a></li>
+                    <li>Porfolio estudiantil: <a href="https://santtty94.github.io/Porfolio-listo/ ">Porfolio
                             estudiantil</a> </li>
             </section>
             </ul>
@@ -166,7 +166,7 @@
                     <div class="fecha"> MAYO 2024 / AGOSTO 2024</div>
                     <p> Captación activa de clientes y promoción de eventos.<br>
 
-                        Gestión de imagen y posicionamiento de varios locales de la ciudad de barcelona.
+                        Gestión de imagen y posicionamiento de varios locales de la ciudad de Barcelona.
                         <br>
                         Creación de relaciones estratégicas con clientes frecuentes y modelos de negocio asociados.
                         <br>
