--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </div>
         </div>
     </header>
-    <main><div class="Container">
+    <main>
+        <div class="Container">
         <div class="photoandname">
             <div class="Foto"><img class="fotomia" src="img/fotoccv.png" alt="Foto Santiago">
                 <div class=Nombre completo>
@@ -256,8 +257,13 @@
 
                 </ul>
             </div>
+ <div class="volver-btn-container">
+            <a href="formacion.html" class="contact-btn formacion-btn">FORMACION ACADEMICA</a>
+        </div>
+
         </div>
     </main>
+
     <footer id="finalBar">
             <p>© Copyright Santy Londoño - 
             <script>document.write(new Date().getFullYear());</script></p>
