--- a/formacion.html
+++ b/formacion.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <title> Formación academica</title>
 </head>
-<body>
+<body class="formacion-page">
     <header>
         <div class="textheader">
             <H1> CURRICULUM VITAE </H1>
@@ -25,7 +25,7 @@
         </div>
     </header>
     <main>
-        <div class="Container">
+        <div class="Container formacion-container">
             <div class="experiencia_laboral">
                 <h1> <i class="bi bi-mortarboard"></i> Formacion academica </h1>
                <hr>
@@ -50,7 +50,7 @@
                             Medellin, Colombia.
                         </p>
                         <br>
-                        <li id="titulo">REPARACION PRUEBA DE ACCESO A UNIVERSIDAD Y FP PARA MAYORES DE 25 AÑOS
+                        <li id="titulo">PREPARACION PRUEBA DE ACCESO A UNIVERSIDAD Y FP PARA MAYORES DE 25 AÑOS
                             CON ASIGNATURAS ESPECIFICAS EN ECONOMIA DE LA EMPRESA Y GEOGRAFIA: </li>
                         <div class="fecha"> CURSO 24/25</div>
                         <p><br>
