listo dos archivos

--- a/index.html
+++ b/index.html
@@ -258,14 +258,14 @@
                 </ul>
             </div>
  <div class="volver-btn-container">
-            <a href="formacion.html" class="contact-btn formacion-btn">FORMACION ACADEMICA</a>
-        </div>
+
+            <a href="formacion.html" class="contact-btn formacion-btn">FORMACION ACADEMICA</a> </div>
 
         </div>
     </main>
 
     <footer id="finalBar">
-            <p>© Copyright Santy Londoño - 
+            <p>© Copyright Santy Londoño </a>- 
             <script>document.write(new Date().getFullYear());</script></p>
        
     </footer>
