--- a/formacion.html
+++ b/formacion.html
@@ -8,13 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <title> Formación academica</title>
 </head>
+
 <body class="formacion-page">
     <header>
         <div class="textheader">
-            <H1> CURRICULUM VITAE </H1>
-            <h3>Santy Londoño</h3>
-            <h4><a href="tel:+34613684300">+34 613 684 300</a></h4>
-       </div>
+            <H1"> CURRICULUM VITAE </H1>
+                <h3>Santy Londoño</h3>
+                <h4><a href="tel:+34613684300">+34 613 684 300</a></h4>
+        </div>
         <div class="header-brand">
             <div class="header-for">For:</div>
             <div class="logo-room">
@@ -27,20 +28,33 @@
     <main>
         <div class="Container formacion-container">
             <div class="experiencia_laboral">
-                <h1> <i class="bi bi-mortarboard"></i> Formacion academica </h1>
-               <hr>
-                <br>
+                <h1> <i class="bi bi-mortarboard"></i> Formación academica </h1>
+                <hr>
                 <div class="listado_experiencia_laboral">
                     <ul>
-                        <li id="titulo">PRIMARIA: </li>
-                        <div class="fecha"> ENERO 2001 / NOVIEMBRE 2005</div>
-                        <P>Colegio Sagrada Familia Aldea Pablo VI <br>
-                            Medellin, Colombia. </p>
                         <br>
-
-                        <li id="titulo">ENSEÑANZA SECUNDARIA OBLIGATORIA (No culminada):</li>
-                        <div class="fecha"> OCTUBRE 2006 / SEPTIEMBRE 2010 </div>
-                        <p>Ies Nicolau Coopernic <br>
+                         <li id="titulo">ADMINISTRACION DE SISTEMAS INFORMATICOS EN RED</li>
+                        <div class="fecha"> ACTUALMENTE </div>
+                        <p> PROMETEO BY THEPOWER!
+                        </p><br>
+                        <li id="titulo">MASTER CYBERSECURITY:</li>
+                        <div class="fecha">ACTUALMENTE</div>
+                        <p>
+                            PROMETEO BY THEPOWER!
+                        </p>                       
+                       
+                        <br>
+                        <li id="titulo">PRUEBA DE ACCESO PARA MAYORES DE 25</li>
+                        <div class="fecha">MAYO 2025</div>
+                        <p>PRUEBA PRESENTADA Y SUPERADA <br>
+                            Ies Nicolau Coopernic
+                        </p>
+                        <br>
+                        <li id="titulo">PREPARACION PRUEBA DE ACCESO A UNIVERSIDAD Y FP PARA MAYORES DE 25 AÑOS
+                            CON ASIGNATURAS ESPECIFICAS EN ECONOMIA DE LA EMPRESA Y GEOGRAFIA: </li>
+                        <div class="fecha"> CURSO 24/25</div>
+                        <p>
+                            CFA Anna Murià. <br>
                             Terrassa, España.
                         </p>
                         <br>
@@ -48,33 +62,27 @@
                         <div class="fecha"> ENERO 2011 / 2013</div>
                         <p>Instituto Ferrini<br>
                             Medellin, Colombia.
-                        </p>
-                        <br>
-                        <li id="titulo">PREPARACION PRUEBA DE ACCESO A UNIVERSIDAD Y FP PARA MAYORES DE 25 AÑOS
-                            CON ASIGNATURAS ESPECIFICAS EN ECONOMIA DE LA EMPRESA Y GEOGRAFIA: </li>
-                        <div class="fecha"> CURSO 24/25</div>
-                        <p><br>
-                            CFA Anna Murià. <br>
-                            Terrassa, España.
-                        </p>
-                        <br><br>
-                        <li id="titulo">PRUEBA DE ACCESO PARA MAYORES DE 25</li>
-                        <div class="fecha">MAYO 2025</div>
-                        <p>PRUEBA PRESENTADA Y SUPERADA <br>
-                            Ies Nicolau Coopernic
-                        </p>
-                        <br>
-                        <br>
-                        <li id="titulo">ADMINISTRACION DE SISTEMAS INFORMATICOS EN RED</li>
-                        <div class="fecha"> ACTUALMENTE </div>
-                        <p> PROMETEO BY THEPOWER!
-                        </p>
-                        <br><br>
-                        <li id="titulo">MASTER CYBERSECURITY:</li>
-                        <div class="fecha">ACTUALMENTE</div>
-                        <p>
-                            PROMETEO BY THEPOWER!
                         </p><br>
+                        <li id="titulo">ENSEÑANZA SECUNDARIA OBLIGATORIA (No culminada):</li>
+                        <div class="fecha"> OCTUBRE 2006 / SEPTIEMBRE 2010 </div>
+                        <p>Ies Nicolau Coopernic <br>
+                            Terrassa, España.<br>
+                            <br>
+                        </p>
+                        <li id="titulo">PRIMARIA: </li>
+                        <div class="fecha"> ENERO 2001 / NOVIEMBRE 2005</div>
+                        <P>Colegio Sagrada Familia Aldea Pablo VI <br>
+                            Medellin, Colombia. </p>
+                            <br>
+                            <hr>
+                        <br>
+
+
+
+
+
+
+
                     </ul>
                 </div>
             </div>
